finished task2-4 roughly

--- a/taipei-day-trip/static/index.html
+++ b/taipei-day-trip/static/index.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Index</title>
+  <title>台北一日遊</title>
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet"> -->
+  <link rel="stylesheet" href="static/css/styles.css">
 </head>
-<body>
-  
+<body class="body">
+  <header class="header">
+      <h2 class="header__title"><a href="#">台北一日遊</a></h2>
+      <nav class="header__nav">
+        <a href="#">預定行程</a>
+        <a href="#">登入/註冊</a>
+      </nav>
+  </header>
+  <main class="main">
+    <div class="hero">
+      <!-- <picture class="hero__img">
+        <source media="(min-width: 500px)" srcset="static/images/bg/bg-hero-desktop.png">
+        <img src="static/images/bg/bg-hero-mobile.png" alt="Taipei101">
+      </picture> -->
+      <div class="hero__content">
+        <h1 class="hero__content__title">輕鬆享受台北一日悠閒</h1>
+        <p class="hero__content__text">探索每個角落, 體驗城市的深度旅遊行程</p>
+        <div class="search-box">
+          <label class="search-box__label">
+            <input type="text" class="search-box__input" placeholder="輸入景點名稱查詢">
+            <img class="search-box__icon" src="static/images/icons/icon-search.png" alt="icon-search">
+          </label>
+        </div>
+      </div>
+    </div>
+    <div class="carousel">
+      <img class="carousel__button carousel__button--left" src="static/images/icons/icon-left-arrow.png" alt="left-arrow">
+      <div class="carousel__track-containeer">
+        <ul class="carousel__track">
+        </ul>
+      </div>
+      <img class="carousel__button carousel__button--right" src="static/images/icons/icon-right-arrow.png" alt="right-arrow">
+    </div>
+    <div class="tabs">
+    </div>
+  </main>
+  <footer class="footer">
+    <p>COPYRIGHT © 2021 台北一日遊</p>
+  </footer>
+  <script defer src="static/js/index.js"></script>    <!-- #staticが基準 -->
 </body>
 </html>
