--- a/taipei-day-trip/static/index.html
+++ b/taipei-day-trip/static/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>首頁</title>
-  <!-- google font: HTMLレンダリングはブロックするが、CSSファイル同士は並行してダウンロードされる為、重いのを先に読み込む -->
+  <link rel="preload" href="/static/css/index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <!-- font: HTMLレンダリングブロック、CSSファイル同士は並行してダウンロードされる為、重いのを先に読み込む but FOUCを防ぐ為cssを先に読み込む -->
   <link rel="preconnect" href="https://fonts.googleapis.com">   <!-- ネットワーク接続の準備を整える(CSSファイルとfontファイルのサーバが異なる為2つ必要) -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <!-- hero & css -->
+  <!-- hero: 誤差の範囲の為cssより後でok　-->
   <link rel="preload" href="/static/images/bg/bg-hero-mobile.webp" as="image" media="(max-width: 499px)"/>  <!-- 僅下載圖片, 尚未顯示 -->
   <link rel="preload" href="/static/images/bg/bg-hero-desktop.webp" as="image" media="(min-width: 500px)"/>
-  <link rel="preload" href="/static/css/index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 </head>
 <body class="body">
   <header class="header">
