add scroll2top feature

--- a/taipei-day-trip/static/attraction.html
+++ b/taipei-day-trip/static/attraction.html
@@ -83,6 +83,7 @@
         <div class="info__transport"></div>
       </div>
     </section>
+    <button class="jump2top-btn"></button>
   </main>
   <footer class="footer">
     <p>COPYRIGHT © 2021 台北一日遊</p>
