--- a/taipei-day-trip/static/index.html
+++ b/taipei-day-trip/static/index.html
@@ -54,6 +54,7 @@
       <section class="tabs">     <!-- 独立する為section化可能 -->
       </section>
     </section>
+    <button class="jump2top-btn"></button>
   </main>
   <footer class="footer">
     <p>COPYRIGHT © 2021 台北一日遊</p>
