improved imgs name

--- a/taipei-day-trip/static/attraction.html
+++ b/taipei-day-trip/static/attraction.html
@@ -27,14 +27,14 @@
     <section class="attraction">     <!-- 独立する為section化可能 -->
       <section class="carousel">
         <button class="carousel__button carousel__button--left">
-          <img src="/static/images/icons/icon-left-arrow.webp" alt="left-arrow">
+          <img src="/static/images/icons/arrow-left.webp" alt="arrow-left">
         </button>
           <div class="carousel__track-container">
             <ul class="carousel__track">
             </ul>
         </div>
         <button class="carousel__button carousel__button--right">
-          <img src="/static/images/icons/icon-right-arrow.webp" alt="right-arrow">
+          <img src="/static/images/icons/arrow-right.webp" alt="arrow-right">
         </button>
         <div class="carousel__nav">
         </div>
