--- a/taipei-day-trip/static/index.html
+++ b/taipei-day-trip/static/index.html
@@ -10,8 +10,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <!-- hero: 誤差の範囲の為cssより後でok　-->
-  <link rel="preload" href="/static/images/bg/bg-hero-mobile.webp" as="image" media="(max-width: 499px)"/>  <!-- 僅下載圖片, 尚未顯示 -->
-  <link rel="preload" href="/static/images/bg/bg-hero-desktop.webp" as="image" media="(min-width: 500px)"/>
+  <link rel="preload" href="/static/images/bg/hero-mobile.webp" as="image" media="(max-width: 499px)"/>  <!-- 僅下載圖片, 尚未顯示 -->
+  <link rel="preload" href="/static/images/bg/hero-desktop.webp" as="image" media="(min-width: 500px)"/>
 </head>
 <body class="body">
   <header class="header">
@@ -33,7 +33,7 @@
         <div class="search-box">
           <label class="search-box__label">
             <input type="text" class="search-box__input" placeholder="輸入景點名稱查詢">
-            <img class="search-box__icon" loading="lazy" src="/static/images/icons/icon-search.webp" alt="icon-search">
+            <img class="search-box__icon" loading="lazy" src="/static/images/icons/search.webp" alt="icon-search">
           </label>
         </div>
       </div>
@@ -41,14 +41,14 @@
     <section class="container">
       <section class="carousel">     <!-- 独立する為section化可能 -->
         <button class="carousel__button carousel__button--left">
-          <img src="/static/images/icons/icon-left-arrow.webp" alt="left-arrow">
+          <img src="/static/images/icons/arrow-left.webp" alt="icon-arrow-left">
         </button>
         <div class="carousel__track-container">
           <ul class="carousel__track">
           </ul>
         </div>
         <button class="carousel__button carousel__button--right">
-          <img src="/static/images/icons/icon-right-arrow.webp" alt="right-arrow">
+          <img src="/static/images/icons/arrow-right.webp" alt="icon-arrow-right">
         </button>
       </section>
       <section class="tabs">     <!-- 独立する為section化可能 -->
