reduced imgs size

--- a/taipei-day-trip/static/attraction.html
+++ b/taipei-day-trip/static/attraction.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">   <!-- ネットワーク接続の準備を整える(CSSファイルとfontファイルのサーバが異なる為2つ必要) -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="icon" type="image/x-icon" href="/static/images/icons/husky32x32.ico">
 </head>
 <body class="body">
   <header class="header">
@@ -27,14 +28,14 @@
     <section class="attraction">     <!-- 独立する為section化可能 -->
       <section class="carousel">
         <button class="carousel__button carousel__button--left">
-          <img src="/static/images/icons/arrow-left.webp" alt="arrow-left">
+          <img src="/static/images/icons/arrow-left32x32.webp" alt="arrow-left">
         </button>
           <div class="carousel__track-container">
             <ul class="carousel__track">
             </ul>
         </div>
         <button class="carousel__button carousel__button--right">
-          <img src="/static/images/icons/arrow-right.webp" alt="arrow-right">
+          <img src="/static/images/icons/arrow-right32x32.webp" alt="arrow-right">
         </button>
         <div class="carousel__nav">
         </div>
