finished css before mvc

--- a/taipei-day-trip/static/attraction.html
+++ b/taipei-day-trip/static/attraction.html
@@ -15,11 +15,13 @@
   <header class="header">
     <section class="header__content">
       <h2 class="header__title"><a href="/">台北一日遊</a></h2>
-      <nav class="header__nav">
+      <nav class="header__nav nav">
         <button class="darkmode-btn">
         </button>
         <a href="#">預定行程</a>
-        <a href="#">登入/註冊</a>
+        <a class="nav__signpop">登入/註冊</a>
+        <div class="overlay"></div>
+        <div class="popup"></div>
       </nav>
     </section>
     <hr class="hr bottom__header">
