--- a/taipei-day-trip/static/attraction.html
+++ b/taipei-day-trip/static/attraction.html
@@ -11,86 +11,112 @@
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <link rel="icon" type="image/x-icon" href="/static/images/icons/husky32x32.ico">
 </head>
+
 <body class="body">
   <header class="header">
     <section class="header__content">
+
       <h2 class="header__title"><a href="/">台北一日遊</a></h2>
+
       <nav class="header__nav nav">
-        <button class="darkmode-btn">
-        </button>
-        <a href="#">預定行程</a>
+        <button class="darkmode-btn"></button>
+        <a class="nav__booking">預定行程</a>
         <a class="nav__signpop">登入/註冊</a>
         <div class="overlay"></div>
         <div class="popup"></div>
       </nav>
     </section>
+
     <hr class="hr bottom__header">
   </header>
+
   <main class="main">
     <section class="attraction">     <!-- 独立する為section化可能 -->
+
       <section class="carousel">
+
         <button class="carousel__button carousel__button--left">
           <img src="/static/images/icons/arrow-left32x32.webp" alt="arrow-left">
         </button>
-          <div class="carousel__track-container">
-            <ul class="carousel__track">
-            </ul>
+
+        <div class="carousel__track-container">
+          <ul class="carousel__track"></ul>
         </div>
+
         <button class="carousel__button carousel__button--right">
           <img src="/static/images/icons/arrow-right32x32.webp" alt="arrow-right">
         </button>
-        <div class="carousel__nav">
-        </div>
+
+        <div class="carousel__nav"></div>
       </section>
+
       <section class="attraction__content">
+
         <h3 class="attraction__title"></h3>
+
         <div class="attraction__info">
           <span class="attraction__cat"></span>
           <span class="attraction__mrt"></span>
         </div>
+
         <div class="schedule">
           <div class="schedule__title">訂購導覽行程</div>
           <div class="schedule__text">以此景點為中心的一日行程，帶您探索城市角落故事</div>
-          <div class="schedule__date">
-            <label for="date">選擇日期：</label>
-            <input id="date" type="date">
-          </div>
-          <div class="schedule__time">
-            <span class="schedule__time--title">選擇時間：</span>
-            <span class="schedule__time--option">
-              <input type="radio" id="morning" name="selectday" value="morning">
-              <label for="morning">上半天</label>
-            </span>
-            <span class="schedule__time--option">
-              <input type="radio" id="evening" name="selectday" value="evening">
-              <label for="evening">下半天</label>
-            </span>
-          </div>
-          <div class="schedule__price">
-            <span class="schedule__price--title">導覽費用：</span>
-            <span class="schedule__price--text">新台幣 ____ 元</span>
-          </div>
-          <button class="button">開始預約行程</button>
+
+          <form class="attraction__form">
+            <div class="schedule__date">
+              <label for="date">選擇日期：</label>
+              <input id="date" type="date" required>
+            </div>
+
+            <div class="schedule__time">
+              <span class="schedule__time--title">選擇時間：</span>
+
+              <span class="schedule__time--option">
+                <!-- <input type="radio" id="morning" name="selectday" value="morning"> -->
+                <input type="radio" id="morning" name="selectday" value="2000" required>
+                <label for="morning">上半天</label>
+              </span>
+
+              <span class="schedule__time--option">
+                <input type="radio" id="afternoon" name="selectday" value="2500" required>
+                <label for="afternoon">下半天</label>
+              </span>
+            </div>
+
+            <div class="schedule__price">
+              <div class="schedule__price--title">導覽費用：<span class="schedule__price--text">新台幣 ____ 元</span></div>
+            </div>
+
+            <button class="button" type="submit">開始預約行程</button>
+          </form>
+
         </div>
       </section>
       <hr class="hr bottom__attraction">
     </section>
+
     <section class="info">
       <div class="info__description"></div>
+
       <div>
         <div class="info__address--title">景點地址</div>
         <div class="info__address"></div>
       </div>
+
       <div>
         <div class="info__transport--title">交通方式</div>
         <div class="info__transport"></div>
       </div>
     </section>
+
     <button class="jump2top-btn"></button>
   </main>
+
   <footer class="footer">
     <p>COPYRIGHT © 2021 台北一日遊</p>
   </footer>
+
   <script type="module" src="/static/js/attraction.js"></script>      <!-- module = defer + strict mode -->
 </body>
 </html>
