--- a/taipei-day-trip/static/index.html
+++ b/taipei-day-trip/static/index.html
@@ -21,7 +21,7 @@
       <nav class="header__nav nav">
         <button class="darkmode-btn">
         </button>
-        <a href="#">預定行程</a>
+        <a class="nav__booking">預定行程</a>
         <a class="nav__signpop">登入/註冊</a>
         <div class="overlay"></div>
         <div class="popup"></div>
