roughly finished this week task

--- a/taipei-day-trip/static/booking.html
+++ b/taipei-day-trip/static/booking.html
@@ -33,5 +33,6 @@
     <p>COPYRIGHT © 2021 台北一日遊</p>
   </footer>
   <script type="module" src="/static/js/booking.js"></script>      <!-- module = defer + strict mode -->
+  <script src="https://js.tappaysdk.com/sdk/tpdirect/v5.18.0"></script>
 </body>
 </html>
