--- a/taipei-day-trip/static/booking.html
+++ b/taipei-day-trip/static/booking.html
@@ -24,7 +24,8 @@
   </header>
   <main class="main">
     <section class="book">
-      <p class="book__wellcome">您好，<span class="book__username"></span>，待預訂的行程如下：</p>
+      <div class="book__wellcome">您好，<span class="book__username"></span></div>
+      <button class="book__order-btn"><a href="/thankyou">查詢訂單</a></button>
       <section class="booking"></section>
     </section>
     <button class="jump2top-btn"></button>
